--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 <body>
   <header>
-    <img src="logo.png" alt="Multitorque Peças">
+    <img src="Logo.png" alt="Multitorque Peças">
     <h1>Multitorque Peças</h1>
   </header>
 
