--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
@@ -207,6 +206,9 @@
       <label for="email">E-mail:</label>
       <input type="email" id="email" name="email" required>
 
+      <label for="telefone">Telefone:</label>
+      <input type="tel" id="telefone" name="telefone">
+
       <label for="mensagem">Mensagem:</label>
       <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
 
@@ -216,7 +218,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Multitorque Peças. Todos os direitos reservados.
+    &copy; 2019 Multitorque Peças. Todos os direitos reservados.
   </footer>
 
   <!-- Botão do WhatsApp -->
@@ -231,4 +233,4 @@
     }
   </script>
 </body>
-
+</html
