--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 <body>
   <header>
-    <img src="Logo.png" alt="Multitorque Peças">
+    <img src="Faxada.png" alt="Multitorque Peças">
     <h1>Multitorque Peças</h1>
   </header>
 
