--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-
-
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Multitorque Peças</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <style>
+    /* Reset e base */
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
@@ -13,64 +14,79 @@
       background-size: cover;
       color: #eee;
       transition: background-color 0.3s, color 0.3s;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      background-color: #111; /* fallback escuro */
     }
-
     header {
       background-color: rgba(0, 0, 0, 0.85);
       padding: 1rem;
       display: flex;
       align-items: center;
       gap: 10px;
+      position: sticky;
+      top: 0;
+      z-index: 999;
     }
-
     header img {
       height: 40px;
       opacity: 0.9;
     }
-
     header h1 {
       color: white;
       font-size: 1.5rem;
       margin: 0;
+      user-select: none;
     }
-
     section {
       padding: 2rem;
       background-color: rgba(0, 0, 0, 0.7);
-      margin: 1rem;
+      margin: 1rem auto;
       border-radius: 8px;
+      max-width: 960px;
+      box-sizing: border-box;
     }
-
     h2 {
       color: #ff9800;
-      font-size: 1.8rem;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      text-align: center;
     }
-
     ul {
       padding-left: 1.5rem;
+      max-width: 600px;
+      margin: auto;
+      line-height: 1.5;
     }
-
     blockquote {
       font-style: italic;
       color: #ccc;
       border-left: 4px solid #ff9800;
       padding-left: 1rem;
       margin-left: 0;
+      max-width: 700px;
+      margin: 1rem auto;
     }
-
     footer {
       background-color: #111;
       color: white;
       text-align: center;
       padding: 1rem;
-      margin-top: 2rem;
+      margin-top: auto;
+      user-select: none;
     }
-
     form {
       display: flex;
       flex-direction: column;
+      max-width: 600px;
+      margin: auto;
     }
-
+    label {
+      margin-bottom: 0.25rem;
+      font-weight: 600;
+      color: #ff9800;
+    }
     input,
     textarea {
       padding: 0.5rem;
@@ -78,8 +94,14 @@
       border: none;
       border-radius: 4px;
       font-size: 1rem;
+      font-family: inherit;
     }
-
+    input:focus,
+    textarea:focus {
+      outline: 2px solid #ff9800;
+      background-color: #222;
+      color: white;
+    }
     button {
       background-color: #ff9800;
       color: #000;
@@ -89,17 +111,16 @@
       font-weight: bold;
       cursor: pointer;
       transition: background-color 0.3s;
+      font-size: 1.1rem;
     }
-
     button:hover {
       background-color: #e68a00;
     }
-
     .zap-button {
       position: fixed;
       bottom: 20px;
       right: 20px;
-      background-color: #25D366;
+      background-color: #25d366;
       color: white;
       width: 60px;
       height: 60px;
@@ -112,31 +133,107 @@
       z-index: 1000;
       text-decoration: none;
     }
-
     .zap-button:hover {
       background-color: #20b858;
     }
-
     .mensagem-sucesso {
-      background-color: #4CAF50;
+      background-color: #4caf50;
       color: white;
       padding: 1rem;
       margin-top: 1rem;
       border-radius: 6px;
       display: none;
+      text-align: center;
+      font-weight: 600;
     }
 
-    @media (prefers-color-scheme: dark) {
-      section {
-        background-color: rgba(0, 0, 0, 0.75);
-      }
+    /* Estilo da seção vitrine técnica */
+    .vitrine {
+      background-color: #f3f4f6; /* cinza claro para contraste */
+      color: #333;
+      border-radius: 10px;
+      padding: 3rem 2rem;
+      max-width: 1100px;
+      margin: 2rem auto;
+      box-shadow: 0 4px 15px rgb(0 0 0 / 0.2);
     }
+    .vitrine h2 {
+      color: #ff9800;
+      margin-bottom: 2rem;
+      font-size: 2.5rem;
+      text-align: center;
+    }
+    .vitrine h3 {
+      font-size: 1.75rem;
+      color: #f97316; /* laranja vivo */
+      margin-bottom: 1rem;
+      border-bottom: 3px solid #ff9800;
+      padding-bottom: 0.25rem;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+      gap: 1rem;
+    }
+    .item {
+      background: white;
+      padding: 12px;
+      border-radius: 10px;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+      font-weight: 600;
+      font-size: 0.95rem;
+      text-align: center;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      cursor: default;
+      user-select: none;
+    }
+    .item:hover {
+      transform: scale(1.05);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.2);
+      background-color: #fffbf1;
+    }
+
+    /* Responsivo para form */
+    @media (max-width: 640px) {
+      section {
+        padding: 1rem;
+        margin: 0.5rem;
+      }
+      form {
+        width: 100%;
+      }
+    }.whatsapp-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999;
+  width: 60px;
+  height: 60px;
+  background-color: #25d366;
+  border-radius: 50%;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform 0.3s ease;
+}
+
+.whatsapp-button:hover {
+  transform: scale(1.1);
+}
+
+.whatsapp-button img {
+  width: 32px;
+  height: 32px;
+}
   </style>
 </head>
-
+<a href="https://wa.me/5511950297862" class="whatsapp-button" target="_blank" aria-label="Fale conosco pelo WhatsApp">
+  <img src="zap.jpeg" alt="WhatsApp" />
+</a>
 <body>
   <header>
-    <img src="Logo.png" alt="Multitorque Peças">
+    <img src="logo.png" alt="Multitorque Peças" />
     <h1>Multitorque Peças</h1>
   </header>
 
@@ -197,40 +294,185 @@
     </p>
   </section>
 
+  <!-- INÍCIO DA SESSÃO VITRINE TÉCNICA -->
+  <section class="vitrine" id="vitrine">
+    <h2>🔧 Vitrine Técnica</h2>
+
+    <div class="mb-12">
+      <h3>🛠️ Motor e Sistema de Combustão</h3>
+      <div class="grid">
+        <span class="item">Bloco do motor</span>
+        <span class="item">Cabeçote</span>
+        <span class="item">Vela de ignição</span>
+        <span class="item">Biela</span>
+        <span class="item">Pistão</span>
+        <span class="item">Anéis do pistão</span>
+        <span class="item">Virabrequim</span>
+        <span class="item">Comando de válvulas</span>
+        <span class="item">Válvulas de admissão e escape</span>
+        <span class="item">Junta do cabeçote</span>
+        <span class="item">Corrente ou correia de comando</span>
+        <span class="item">Radiador</span>
+        <span class="item">Bomba d'água</span>
+        <span class="item">Termostato</span>
+        <span class="item">Mangueiras do radiador</span>
+        <span class="item">Intercooler (turbo)</span>
+        <span class="item">Turbocompressor</span>
+        <span class="item">Injetor de combustível</span>
+        <span class="item">Bomba de combustível</span>
+        <span class="item">Corpo de borboleta</span>
+        <span class="item">Sensor MAF</span>
+        <span class="item">Sensor MAP</span>
+        <span class="item">TBI</span>
+        <span class="item">Filtro de ar</span>
+        <span class="item">Filtro de combustível</span>
+      </div>
+    </div>
+
+    <div class="mb-12">
+      <h3>⚙️ Transmissão e Embreagem</h3>
+      <div class="grid">
+        <span class="item">Câmbio (manual ou automático)</span>
+        <span class="item">Embreagem</span>
+        <span class="item">Disco de embreagem</span>
+        <span class="item">Platô</span>
+        <span class="item">Atuador hidráulico</span>
+        <span class="item">Fluido de transmissão</span>
+        <span class="item">Semi-eixo</span>
+        <span class="item">Homocinética</span>
+        <span class="item">Trambulador</span>
+        <span class="item">Diferencial</span>
+        <span class="item">Cardã</span>
+      </div>
+    </div>
+
+    <div class="mb-12">
+      <h3>🛞 Suspensão e Direção</h3>
+      <div class="grid">
+        <span class="item">Amortecedores</span>
+        <span class="item">Molas helicoidais</span>
+        <span class="item">Coxins</span>
+        <span class="item">Bandeja</span>
+        <span class="item">Pivô</span>
+        <span class="item">Buchas de suspensão</span>
+        <span class="item">Barra estabilizadora</span>
+        <span class="item">Terminais de direção</span>
+        <span class="item">Caixa de direção</span>
+        <span class="item">Bomba da direção hidráulica</span>
+        <span class="item">Óleo da direção</span>
+        <span class="item">Coluna de direção</span>
+      </div>
+    </div>
+
+    <div class="mb-12">
+      <h3>🛑 Freios</h3>
+      <div class="grid">
+        <span class="item">Disco de freio</span>
+        <span class="item">Pastilha de freio</span>
+        <span class="item">Tambor de freio</span>
+        <span class="item">Sapata de freio</span>
+        <span class="item">Cilindro mestre</span>
+        <span class="item">Servo freio</span>
+        <span class="item">Fluido de freio</span>
+        <span class="item">Pinça de freio</span>
+        <span class="item">ABS (módulo e sensores)</span>
+      </div>
+    </div>
+
+    <div class="mb-12">
+      <h3>🔋 Sistema Elétrico</h3>
+      <div class="grid">
+        <span class="item">Bateria</span>
+        <span class="item">Alternador</span>
+        <span class="item">Motor de arranque</span>
+        <span class="item">Relés</span>
+        <span class="item">Fusíveis</span>
+        <span class="item">Chicote elétrico</span>
+        <span class="item">ECU</span>
+        <span class="item">Sensor de rotação</span>
+        <span class="item">Sensor de velocidade</span>
+        <span class="item">Sonda lambda</span>
+        <span class="item">Luzes em geral</span>
+        <span class="item">Painel de instrumentos</span>
+        <span class="item">Bobina de ignição</span>
+      </div>
+    </div>
+
+    <div class="mb-12">
+      <h3>🌬️ Climatização e Arrefecimento</h3>
+      <div class="grid">
+        <span class="item">Radiador</span>
+        <span class="item">Eletroventilador</span>
+        <span class="item">Válvula termostática</span>
+        <span class="item">Compressor A/C</span>
+        <span class="item">Condensador</span>
+        <span class="item">Evaporador</span>
+        <span class="item">Filtro de cabine</span>
+      </div>
+    </div>
+
+    <div class="mb-12">
+      <h3>🚘 Lataria e Acabamentos</h3>
+      <div class="grid">
+        <span class="item">Capô</span>
+        <span class="item">Para-lamas</span>
+        <span class="item">Parachoque</span>
+        <span class="item">Porta</span>
+        <span class="item">Teto</span>
+        <span class="item">Porta-malas</span>
+        <span class="item">Retrovisores</span>
+        <span class="item">Vidros</span>
+        <span class="item">Borrachas</span>
+        <span class="item">Frisos</span>
+        <span class="item">Grade frontal</span>
+      </div>
+    </div>
+
+    <div class="mb-12">
+      <h3>🧰 Interior e Conforto</h3>
+      <div class="grid">
+        <span class="item">Bancos</span>
+        <span class="item">Cintos</span>
+        <span class="item">Painel</span>
+        <span class="item">Volante</span>
+        <span class="item">Pedais</span>
+        <span class="item">Alavanca de câmbio</span>
+        <span class="item">Tapetes</span>
+        <span class="item">Forro do teto</span>
+        <span class="item">Comandos elétricos</span>
+      </div>
+    </div>
+
+    <div>
+      <h3>🛑 Outros Sistemas</h3>
+      <div class="grid">
+        <span class="item">Escapamento</span>
+        <span class="item">Tanque de combustível</span>
+        <span class="item">Bocal do tanque</span>
+        <span class="item">Sensor de nível</span>
+        <span class="item">Trava elétrica</span>
+        <span class="item">Vidro elétrico</span>
+        <span class="item">Limpador</span>
+        <span class="item">Motor do limpador</span>
+        <span class="item">Reservatório do limpador</span>
+      </div>
+    </div>
+  </section>
+  <!-- FIM da Vitrine -->
+
   <section>
     <h2>Fale Conosco</h2>
     <form onsubmit="mostrarMensagem(event)">
       <label for="nome">Nome:</label>
-      <input type="text" id="nome" name="nome" required>
+      <input type="text" id="nome" name="nome" required />
 
       <label for="email">E-mail:</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" name="email" required />
 
       <label for="telefone">Telefone:</label>
-      <input type="tel" id="telefone" name="telefone">
+      <input type="tel" id="telefone" name="telefone" />
 
       <label for="mensagem">Mensagem:</label>
       <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
 
-      <button type="submit">Enviar</button>
-      <div class="mensagem-sucesso" id="sucesso">Cadastro realizado com sucesso. Seja bem-vindo!</div>
-    </form>
-  </section>
-
-  <footer>
-    &copy; 2019 Multitorque Peças. Todos os direitos reservados.
-  </footer>
-
-  <!-- Botão do WhatsApp -->
-  <a class="zap-button" href="https://wa.me/+5511937450274" target="_blank" aria-label="Converse pelo WhatsApp">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" width="30" height="30">
-  </a>
-
-  <script>
-    function mostrarMensagem(e) {
-      e.preventDefault();
-      document.getElementById('sucesso').style.display = 'block';
-    }
-  </script>
-</body>
-</html
+      <button type="
