--- a/index.html
+++ b/index.html
@@ -474,5 +474,6 @@
 
       <label for="mensagem">Mensagem:</label>
       <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
+       <button type="submit">Enviar Mensagem</button
 
       <button type="
