--- a/index.html
+++ b/index.html
@@ -543,17 +543,15 @@
   <div class="container">
     <h2>Fale Conosco</h2>
     <form action="https://formsubmit.co/multitorques@gmail.com" method="POST">
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" name="nome" required>
+  <input type="hidden" name="_next" value="https://multitorques.com.br/obrigado.html">
+  <input type="hidden" name="_captcha" value="false">
 
-      <label for="email">E-mail:</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="telefone">Telefone:</label>
-      <input type="tel" id="telefone" name="telefone" required>
-
-      <label for="mensagem">Mensagem:</label>
-      <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
+  <input type="text" name="nome" placeholder="Seu nome" required>
+  <input type="tel" name="telefone" placeholder="WhatsApp" required>
+  <textarea name="mensagem" placeholder="Descreva a peça que está procurando" required></textarea>
+  
+  <button type="submit">Enviar</button>
+</form>
 
       <!-- Proteções -->
       <input type="hidden" name="_captcha" value="false">
