--- a/obrigado.html
+++ b/obrigado.html
@@ -1,47 +1,35 @@
+<!-- obrigado.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Obrigado pelo contato</title>
+  <title>Obrigado!</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f1f1f1;
+      background-color: #111;
+      color: white;
       text-align: center;
-      padding: 50px;
-    }
-    .container {
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      display: inline-block;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      padding-top: 100px;
     }
     h1 {
-      color: green;
+      color: orange;
     }
     a {
       display: inline-block;
       margin-top: 20px;
       padding: 10px 20px;
-      background-color: #007BFF;
-      color: white;
+      background-color: orange;
+      color: black;
       text-decoration: none;
       border-radius: 5px;
-    }
-    a:hover {
-      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-
-  <div class="container">
-    <h1>✅ Obrigado pelo contato!</h1>
-    <p>Recebemos sua mensagem e entraremos em contato o mais rápido possível.</p>
-    <a href="index.html">Voltar ao site</a>
-  </div>
-
+  <h1>Mensagem enviada com sucesso!</h1>
+  <p>Em breve entraremos em contato com você pelo WhatsApp.</p>
+  <a href="https://multitorque.online">Voltar ao site</a>
 </body>
 </html>
