--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
   <textarea name="mensagem" placeholder="Descreva a peça que está procurando" required></textarea>
   
   <!-- Redireciona para a página de agradecimento -->
-  <input type="hidden" name="_next" value="https://multitorques.online/obrigado.html">
+  <input type="hidden" name="_next" value="https://multitorques.com.br/obrigado.html">
   
   <!-- Proteção anti-spam -->
   <input type="hidden" name="_captcha" value="false">
